add some simple spider

--- a/config.ini
+++ b/config.ini
@@ -10,10 +10,10 @@ use_unicode = True
 test = TEST
 
 [cookie]   
-cookie = 
+cookie = SINAGLOBAL=1568907834589.4814.1451880320550; UOR=www.techug.com,widget.weibo.com,blog.csdn.net; YF-V5-G0=a0e87040bfaca9b1b05c465a9e888d2d; YF-Ugrow-G0=4703aa1c27ac0c4bab8fc0fc5968141e; _s_tentry=-; appkey=; Apache=6884760775137.692.1456798712501; ULV=1456798712512:14:1:1:6884760775137.692.1456798712501:1455758967051; login_sid_t=44b083b0492f1134c1ba5a0ba727ee23; SUS=SID-3237426773-1456798757-JA-i2swp-f1328ae4aca4226de2ae5b6cfba809a9; SUE=es%3D171823f64362790381ff1043fb111434%26ev%3Dv1%26es2%3D73301c1d169fd34a2cbb63141c8c40b1%26rs0%3DjpaUUkHMsRDlt%252B9DdaM%252BEnkbc1OmNvKMO4sWbC%252BqbTFhkzd0Ojh28gB%252BxQHdEDmzEaxpmsWPtqa7qjN4MgPq4VkuyIeA4I%252B89bXya88BavOOxo17O8Y%252B5PIKItG0QJmz19s0cFZSVEsXBtkalFgZKYgj%252FHfwHHj56SUzHSd%252B4hs%253D%26rv%3D0; SUP=cv%3D1%26bt%3D1456798757%26et%3D1456885157%26d%3Dc909%26i%3D09a9%26us%3D1%26vf%3D0%26vt%3D0%26ac%3D0%26st%3D0%26uid%3D3237426773%26name%3Dwgl672%2540163.com%26nick%3D%25E4%25B8%258D%25E8%25A6%2581%25E9%259D%25A0%25E8%25BF%2591%26fmp%3D%26lcp%3D2016-01-24%252015%253A43%253A23; SUB=_2A2570Ix1DeTxGeVM6FUV8ijLzD-IHXVYp_q9rDV8PUNbuNAMLXjTkW9LHetxUmAgRZzto0Z35BaC6JkEu-E5_w..; SUBP=0033WrSXqPxfM725Ws9jqgMF55529P9D9WFwHhqST14Lgc3_22XgCAuZ5JpX5K2t; SUHB=0P1c-Y59qZtda5; ALF=1488334757; SSOLoginState=1456798757; un=wgl672@163.com; wvr=6; YF-Page-G0=b0c4b471b0031ce255ef4bc08defb715
 
 [weibo]
-mainID =  
+mainID =  3275251324
 school =  
 
 [name_thread_amount]
